# bs-p

./: .gitignore  Cargo.toml  DOCS.md  DOCSru.md  LICENSE  README.md  READMEru.md  build.rs  index.html  kernel.c  kernel.h  lib.rs  publish_update.sh  ring_buffer.rs
.github/workflows/: ci.yml  publish.yml
c_src/: analytics.c  analytics.h  kernel.c  ring_buffer.c
docs/: READMEru.md
examples/: bench.rs
src/: analytics.rs  lib.rs  ring_buffer.rs
tools/release/: publish_update.sh
tools/scripts/: plot_analytics.py
