[package]
name = "polymarket-kernel"
version = "0.1.1"
edition = "2024"
authors = ["Polymarket Kernel Contributors"]
description = "Ultra-low latency Polymarket logit jump-diffusion kernel with AVX-512 SoA compute path and lock-free SPSC ring buffer."
license = "MIT"
repository = "https://github.com/lubluniky/bs-p"
readme = "README.md"
keywords = ["hft", "simd", "avx512", "polymarket", "market-making"]
categories = ["algorithms", "mathematics", "finance"]
build = "build.rs"

[lib]
path = "lib.rs"

[build-dependencies]
cc = "1.0"
