[package]
name = "polymarket-kernel"
version = "0.2.1"
edition = "2024"
authors = ["Polymarket Kernel Contributors"]
description = "Ultra-low latency Polymarket decision-support and risk engine with runtime AVX-512 acceleration, quoting kernel, analytics, and lock-free SPSC ring buffer."
license = "MIT"
repository = "https://github.com/holypolyfoundation/bs-p"
readme = "README.md"
keywords = ["hft", "simd", "avx512", "polymarket", "market-making"]
categories = ["algorithms", "mathematics", "finance"]
build = "build.rs"

[lib]
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"
